<resources>
    <string name="app_name">ImLibrary</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="rig_sure">确认</string>
    <string name="iknow">知道了</string>
    <string name="chat_img_loading">加载中</string>
    <string name="chat_img_loadfail">加载失败</string>
    <string name="server_error">网络不给力，请再试试啦~</string>
    <string name="warning_service_error">服务器连接失败,请再试试啦～</string>
    <string name="server_string_null">服务器内部异常,请稍候再试~</string>
    <string name="action_settings">Settings</string>
    <string name="w1">周一</string>
    <string name="w2">周二</string>
    <string name="w3">周三</string>
    <string name="w4">周四</string>
    <string name="w5">周五</string>
    <string name="w6">周六</string>
    <string name="w7">周日</string>
    <string name="sunday">星期天</string>
    <string name="monday">星期一</string>
    <string name="tuesday">星期二</string>
    <string name="wednesday">星期三</string>
    <string name="thursday">星期四</string>
    <string name="friday">星期五</string>
    <string name="saturday">星期六</string>
    <string name="today">今天</string>
    <string name="yesterday">昨天</string>
    <string name="goods_day">天</string>
    <string name="goods_hour">时</string>
    <string name="goods_minute">分</string>
    <string name="goods_second">秒</string>
    <string name="date_format">yyyy-MM-dd</string>
    <string name="person_consttelltion_aquarius">水瓶座</string>
    <string name="person_consttelltion_Pisces">双鱼座</string>
    <string name="person_consttelltion_Aries">白羊座 </string>
    <string name="person_consttelltion_Taurus">金牛座</string>
    <string name="person_consttelltion_Gemini">双子座</string>
    <string name="person_consttelltion_cancer">巨蟹座</string>
    <string name="person_consttelltion_Leo">狮子座</string>
    <string name="person_consttelltion_virgo">处女座</string>
    <string name="person_consttelltion_libra">天秤座</string>
    <string name="person_consttelltion_Scorpio">天蝎座</string>
    <string name="person_consttelltion_Sagittarius">射手座</string>
    <string name="chat_title_msg">消息</string>
    <string name="chat_title_friend">好友</string>
    <string name="chat_title_create_group">发起群聊</string>
    <string name="chat_title_add_friend">添加好友</string>
    <string name="chat_group_info_title">聊天信息</string>
    <string name="chat_group_info_nickname">群聊名称</string>
    <string name="chat_group_info_nickname_my">我在本群的昵称</string>
    <string name="chat_group_info_nickname_hint">昵称长度超过上限了哦～</string>
    <string name="chat_group_info_member">群成员</string>
    <string name="chat_group_info_code">分享群二维码</string>
    <string name="chat_group_info_activie">群活动</string>
    <string name="chat_group_info_msg_onoff">消息免打扰</string>
    <string name="chat_group_info_top_onoff">置顶聊天</string>
    <string name="chat_group_info_book_onoff">保存到通讯录</string>
    <string name="chat_group_info_img">聊天图片</string>
    <string name="chat_group_info_clear_msg">清除聊天记录</string>
    <string name="chat_group_info_report">举报</string>
    <string name="chat_group_info_delete">删除并退出群聊</string>
    <string name="chat_group_info_dissolve">解散本群</string>
    <string name="chat_group_info_create">本群创建于"%1$s"</string>
    <string name="chat_group_info_edit_groupname">群名称</string>
    <string name="chat_group_info_edit_myname_hint">设置的昵称只会在当前群内显示</string>
    <string name="chat_group_info_menu_info_self">进入个人首页</string>
    <string name="chat_group_info_menu_info">查看ta的首页</string>
    <string name="chat_group_info_menu_chat">发起聊天</string>
    <string name="chat_group_info_menu_admin">设为管理员</string>
    <string name="chat_group_info_menu_admin_cancal">取消管理员身份</string>
    <string name="chat_group_info_menu_remove">移除当前群</string>
    <string name="chat_group_info_menu_remove_hint">身为一个负责任的群主，需要指定其他人为群主，才可退出哦~</string>
    <string name="chat_group_info_menu_remove_hint_member">删除退出后将不会接收到群消息~</string>
    <string name="chat_group_info_menu_remove_sure">指定并退出</string>
    <string name="chat_group_info_menu_dissolve_hint">解散后你将失去和群友的联系，确认解散吗？</string>
    <string name="chat_group_info_uploading_avatar">正在上传头像</string>
    <string name="chat_group_info_current_group">当前群为</string>
    <string name="chat_group_info_current_group_add1">当前群为开放群，任何人都可以加入这个群组</string>
    <string name="chat_group_info_current_group_add2">当前群为非开放群，仅限群主和管理员邀请加入</string>
    <string name="chat_group_info_notice">公告</string>
    <string name="chat_group_member_ask">邀请成员</string>
    <string name="chat_group_member_delete">删除成员</string>
    <string name="chat_group_member_set_manager">设置管理员</string>
    <string name="chat_groupinfo_members_title">全部群成员</string>
    <string name="chat_group_not_in">不存在或不在此群</string>
    <string name="avatar_change_sucess">头像更换成功</string>
    <string name="preson_info_delete_sucess">删除成功！</string>
    <string name="group_add_max_hint">群成员已达到%1$d人上限~</string>
    <string name="chat_delete_chat_records_toast">确定要清空本地的聊天记录么？</string>
    <string name="admin_limit">群组管理员不能超过5位</string>
    <string name="chat_group_create">创建</string>
    <string name="chat_group_create_self">我创建的群</string>
    <string name="chat_group_create_joined">我加入的群</string>
    <string name="chat_group_create_title">创建群组</string>
    <string name="chat_group_create_search">搜索群组</string>
    <string name="chat_group_nickname_limit_toast">字数超过上限了哦～</string>
    <string name="chat_group_search_empty_hint">可以通过群聊中的“保存到通讯录”选项，将它们保存到这里哦~</string>
    <string name="chat_group_search_fail_hint">没有相关群组哦~</string>
    <string name="chat_group_create_name_hint">主银，请赐我一个名字吧~</string>
    <string name="chat_group_create_setting">设置群属性</string>
    <string name="chat_group_create_setting_open">开放群</string>
    <string name="chat_group_create_setting_open_hint">任何人都可以加入这个群组</string>
    <string name="chat_group_create_setting_unopen">非开放群</string>
    <string name="chat_group_create_setting_unopen_hint">仅限群主和管理邀请加入</string>
    <string name="chat_group_create_name_empty">未命名</string>
    <string name="chat_group_create_add_title">添加群成员</string>
    <string name="chat_group_create_add">添加成员</string>
    <string name="chat_group_search_hint">搜索好友昵称</string>
    <string name="search_merchant">搜索商家</string>
    <string name="chat_group_search_selected">已选择"%1$d"人</string>
    <string name="chat_group_contact_empty">空白页面</string>
    <string name="chat_group_contact_notfund">没有相关结果</string>
    <string name="chat_group_created_hint">您已成功创建群\""%1$s"\"，马上邀请好友加入吧</string>
    <string name="chat_create_out_title">达到建群上限</string>
    <string name="chat_create_out_message">太厉害了！你已经创建了100个群，请好好打理它们吧~</string>
    <string name="chat_create_out_sure">我知道了~</string>
    <string name="chat_create_fail">创建群失败</string>
    <string name="chat_group_template_1">"%1$s"邀请了"%2$s"加入群组</string>
    <string name="chat_group_template_1_1">你邀请了"%1$s"加入群组</string>
    <string name="chat_group_template_1_2">你被"%1$s"邀请加入群组</string>
    <string name="chat_group_template_2">"%1$s"将群组名称更改为"%2$s"</string>
    <string name="chat_group_template_2_1">你将群组名称更改为"%1$s"</string>
    <string name="chat_group_template_3">"%1$s"退出了群组，"%2$s"成为了群主</string>
    <string name="chat_group_template_3_1">你被"%1$s"指定为群主</string>
    <string name="chat_group_template_3_2">你指定"%1$s"为群主</string>
    <string name="chat_group_template_4">"%1$s"修改了群头像</string>
    <string name="chat_group_template_4_1">你修改了群组头像</string>
    <string name="chat_group_template_5">"%1$s"被设置为管理员</string>
    <string name="chat_group_template_5_1">你设置了"%1$s"为管理员</string>
    <string name="chat_group_template_5_2">你被"%1$s"设置为管理员</string>
    <string name="chat_group_template_6">"%1$s"加入了群组</string>
    <string name="chat_group_template_6_1">你已加入了群组</string>
    <string name="chat_group_template_7">"%1$s"退出了群组</string>
    <string name="chat_group_template_7_1">你已退出了群组</string>
    <string name="chat_group_template_8">"%1$s"将"%2$s"移除了群组</string>
    <string name="chat_group_template_8_1">你已将"%1$s移除了群组</string>
    <string name="chat_group_template_8_2">你已被"%1$s移除了群组</string>
    <string name="chat_group_template_9">"%1$s"已将本群解散</string>
    <string name="chat_group_template_9_1">你已将本群解散</string>
    <string name="chat_group_template_10">"%1$s"取消了"%2$s"管理员身份</string>
    <string name="chat_group_template_10_1">你取消了"%1$s"管理员身份</string>
    <string name="chat_group_template_10_2">你被取消了管理员身份</string>
    <string name="chat_group_info_create_time">yyyy年MM月dd日</string>
    <string name="chat_group_qmark_title">分享群二维码</string>
    <string name="chat_group_qmark_hint">扫一扫群二维码加入该群</string>
    <string name="chat_group_qmark_share">分享二维码</string>
    <string name="chat_group_qmark_reset">重置群组二维码</string>
    <string name="chat_group_qmark_reset_hint">重置后原有的群组二维码将失效，确定重置？</string>
    <string name="chat_group_delete_edit_hint">暂无可编辑成员~</string>
    <string name="chat_group_invite_new_title">邀请新成员</string>
    <string name="chat_group_invite_title">群聊邀请</string>
    <string name="chat_group_invite_sended_hint">群邀请已经发送啦~</string>
    <string name="chat_group_invite_later_hint">来晚一步，该群成员已满</string>
    <string name="chat_group_invite_accept_hint">你已接受邀请啦~</string>
    <string name="chat_group_invite_invite_invalid">该邀请不存在或已过期哦~</string>
    <string name="chat_group_invite_look">进群看看</string>
    <string name="chat_group_invite_out_hint">当前群成员过多，\n对方同意邀请后才会加入群聊。</string>
    <string name="chat_group_invite_sure">邀请</string>
    <string name="chat_group_invite_join_hint">立即加入</string>
    <string name="chat_group_invite_members">群组成员</string>
    <string name="chat_group_invite_members_nomore">您的好友已经都在该群里了~</string>
    <string name="chat_group_invite_item_head">邀请你加入群聊</string>
    <string name="chat_group_invite_item_click">点击查看详情</string>
    <string name="chat_group_invite_group_members">人</string>
    <string name="chat_newfriend_hint">给你打了招呼哟~</string>
    <string name="chat_following_hint">hello，交个朋友嘛？点下关注而已啦~</string>
    <string name="chat_follow_follow_toast">谢谢你的关注哟~</string>
    <string name="chat_followed_hint">我们已经是好友啦，试试给我发个语音、图片吧~</string>
    <string name="chat_following_toast">你关注了对方</string>
    <string name="chat_follower_toast">对方关注了你</string>
    <string name="chat_list_newfriend_title">新朋友</string>
    <string name="follow_focus">+关注</string>
    <string name="friend_home_unfollowsure">确定不再关注此人吗？</string>
    <string name="friend_home_unfollow_sucess">取消关注成功！</string>
    <string name="friend_home_blacklist_sucess">成功加入黑名单！</string>
    <string name="chat_newfriend_follow">关注</string>
    <string name="chat_add_follow">加关注</string>
    <string name="chat_newfriend_following">已关注</string>
    <string name="chat_newfriend_followed">相互关注</string>
    <string name="chat_add_follow_hint">加关注可以更好的了解对方哦~</string>
    <string name="chat_hint_follow_title">私聊秘诀大放送</string>
    <string name="chat_hint_follow_content">相互关注才成为好友，就可以发送语音、图片等信息哟~你懂的~</string>
    <string name="tab_chat_title">社交</string>
    <string name="chat_tab_shareholders">股东会</string>
    <string name="chat_tab_contacts">联系人</string>
    <string name="chat_tab_group">群聊</string>
    <string name="chat_tab_home">家园</string>
    <string name="invate_contacts_hint">你可以用微信、QQ、短信等方式把邀请码发给好友，对方完成注册后，就可以和您一起使用乌托圈了。</string>
    <string name="invate_contacts_weixin">微信邀请</string>
    <string name="invate_contacts_qq">QQ邀请</string>
    <string name="invate_contacts_sms">短信邀请</string>
    <string name="qrcode_hint">扫一扫</string>
    <string name="qrcode_handle_ing">正在处理...</string>
    <string name="person_center_nickname">昵称</string>
    <string name="person_center_sex">性别</string>
    <string name="person_center_address">地址</string>
    <string name="person_center_sign">签名</string>
    <string name="person_center_card">发送名片</string>
    <string name="person_center_msg">发消息</string>
    <string name="person_setting_remark">备注</string>
    <string name="person_setting_star">设为星标</string>
    <string name="person_setting_limit_look">不让看我的真实姓名</string>
    <string name="person_setting_delete">删除</string>
</resources>