<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:setting="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color"
    android:orientation="vertical">

    <include layout="@layout/layout_title" />

    <chat.view.TopView
        android:id="@+id/sticky_group_info"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <chat.view.ScrollGridView
                android:id="@+id/members_group_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:numColumns="5" />

            <ImageView style="@style/a_line" />

            <chat.view.SettingItemView
                android:id="@+id/members_all_group_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                setting:empty="true"
                setting:title="@string/chat_groupinfo_members_title" />

            <ImageView style="@style/a_line" />

            <LinearLayout
                android:id="@+id/top_name_group_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@color/white"
                android:visibility="gone"
                android:orientation="vertical">

                <ImageView style="@style/a_line" />

                <chat.view.SettingItemView
                    android:id="@+id/nickname_group_info"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    setting:empty="true"
                    setting:title="@string/chat_group_info_nickname" />

                <ImageView style="@style/a_line" />

                <RelativeLayout
                    android:id="@+id/code_group_info"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white">

                    <chat.view.SettingItemView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        setting:empty="true"
                        setting:title="@string/chat_group_info_code" />

                    <ImageView
                        android:id="@+id/code_icon_group_info"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="30dp"
                        android:src="@drawable/ic_code_small" />
                </RelativeLayout>

                <ImageView style="@style/a_line" />

                <chat.view.SettingItemView
                    android:id="@+id/nickname_my_group_info"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    setting:empty="true"
                    setting:title="@string/chat_group_info_nickname_my" />

                <ImageView style="@style/a_line" />

                <chat.view.SettingItemView
                    android:id="@+id/notice_group_info"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    setting:empty="true"
                    setting:title="@string/chat_group_info_notice" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/tab_info_group_info"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@color/bg_color"
                android:orientation="vertical"
                android:visibility="visible">

                <ImageView style="@style/a_line" />

                <chat.view.SettingItemView
                    android:id="@+id/msg_on_off_group_info"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    setting:empty="true"
                    setting:on_off="true"
                    setting:title="@string/chat_group_info_msg_onoff" />

                <ImageView
                    style="@style/a_line"
                    android:layout_marginLeft="8dp" />

                <chat.view.SettingItemView
                    android:id="@+id/top_group_info"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    setting:empty="true"
                    setting:on_off="true"
                    setting:title="@string/chat_group_info_top_onoff" />

                <ImageView
                    style="@style/a_line"
                    android:layout_marginLeft="8dp" />

                <chat.view.SettingItemView
                    android:id="@+id/book_group_info"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    setting:empty="true"
                    setting:on_off="true"
                    setting:title="@string/chat_group_info_book_onoff" />

                <ImageView
                    style="@style/a_line"
                    android:layout_marginLeft="8dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="12dp"
                    android:background="@color/bg_color" />

                <ImageView style="@style/a_line" />

                <chat.view.SettingItemView
                    android:id="@+id/img_group_info"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    setting:empty="true"
                    setting:title="@string/chat_group_info_img" />

                <ImageView style="@style/a_line" />

                <chat.view.SettingItemView
                    android:id="@+id/clear_msg_group_info"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    setting:empty="true"
                    setting:title="@string/chat_group_info_clear_msg" />

                <ImageView
                    style="@style/a_line"
                    android:layout_marginLeft="8dp" />

                <chat.view.SettingItemView
                    android:id="@+id/report_group_info"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    setting:empty="true"
                    setting:title="@string/chat_group_info_report" />

                <ImageView style="@style/a_line" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/bg_color"
                    android:orientation="horizontal"
                    android:padding="10dp">

                    <TextView
                        android:id="@+id/delete_group_info"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_weight="1"
                        android:background="@drawable/bg_gray_selector"
                        android:clickable="true"
                        android:padding="10dp"
                        android:gravity="center"
                        android:text="@string/chat_group_info_delete"
                        android:textSize="@dimen/text_size_title_btn"
                        android:textColor="@color/black_gray_selector"
                        android:visibility="visible" />

                    <TextView
                        android:id="@+id/dissolve_group_info"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="10dp"
                        android:layout_weight="1"
                        android:background="@drawable/bg_gray_selector"
                        android:clickable="true"
                        android:padding="10dp"
                        android:gravity="center"
                        android:text="@string/chat_group_info_dissolve"
                        android:textSize="@dimen/text_size_title_btn"
                        android:visibility="visible" />
                </LinearLayout>

                <TextView
                    android:id="@+id/create_group_info"
                    style="@style/search_hint"
                    android:background="@color/bg_color"
                    android:paddingTop="20dp"
                    android:visibility="gone"
                    android:text="@string/chat_group_info_create" />
            </LinearLayout>
        </LinearLayout>

    </chat.view.TopView>


</LinearLayout>