<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@color/black"
    android:layout_height="match_parent" >
    
    <ImageView
        android:id="@+id/scan_image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/ok"
        android:visibility="gone"
        android:scaleType="centerInside"/>
    
   <com.imtest.chat.qrcode.QRScanView
        android:id="@+id/scan_view"
        android:layout_centerInParent="true"
        android:layout_width="@dimen/qrcode_scan_size_width"
        android:layout_height="@dimen/qrcode_scan_size_width" />
     <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        android:padding="10dip">

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:max="200" />

        <TextView
            android:id="@+id/handle_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/progressBar"
            android:layout_centerHorizontal="true"
            android:text="@string/qrcode_handle_ing"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size_top" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:background="@color/qr_title_black_tm"
        android:layout_height="@dimen/title_high" >

        
        <ImageView
            android:id="@+id/back"
            style="@style/titleButton"
            android:layout_alignParentLeft="true"
            android:contentDescription="@string/ok"
            android:src="@drawable/btn_back_white" />

        <TextView
            android:id="@+id/titleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/qrcode_hint"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size_top" />
 
    </RelativeLayout>
    
</RelativeLayout>